[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI/fonts/propaganda/propaganda.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/Scenes/Pause.gd" type="Script" id=2]
[ext_resource path="res://GUI/fonts/fyodor/Fyodor-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GUI/fonts/fyodor/Fyodor-BoldCondensedOblique.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://GUI/fonts/1942_report/1942.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 5
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.733333, 0.588235, 0.356863, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.733333, 0.588235, 0.356863, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
anti_aliasing = false

[sub_resource type="DynamicFont" id=8]
size = 5
extra_spacing_top = -3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 7
font_data = ExtResource( 4 )

[node name="Pause" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = 2.0
margin_right = -4.0
margin_bottom = 2.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.57165
margin_top = -2.02755
margin_right = 3.57166
margin_bottom = -2.02754
color = Color( 0.00784314, 0, 0, 0.329412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 9.0
margin_top = 4.0
margin_right = 86.0
margin_bottom = 173.0
color = Color( 0.298039, 0.168627, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 14.0
margin_top = 12.0
margin_right = 79.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 18.3412, 56.5182 )
color = Color( 0.501961, 0.294118, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 92.0
margin_top = 27.0
margin_right = 317.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( -69.1896, 21.1146 )
color = Color( 0.298039, 0.168627, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="CanvasLayer/Control"]
margin_left = 99.0
margin_top = 32.0
margin_right = 311.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( -69.1896, 21.1146 )
color = Color( 0.501961, 0.294118, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePaused" type="Label" parent="CanvasLayer/Control"]
margin_left = 122.445
margin_top = 9.48171
margin_right = 242.445
margin_bottom = 23.4817
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.784314, 0, 0, 1 )
text = "Game Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
margin_left = 16.0
margin_top = 16.0
margin_right = 76.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeopleButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "People"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestsButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 20.0
margin_right = 60.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Quests"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsButton" type="Button" parent="CanvasLayer/Control/VBoxContainer"]
margin_top = 40.0
margin_right = 60.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeopleScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
margin_left = 103.445
margin_top = 34.2227
margin_right = 305.445
margin_bottom = 165.223
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PeopleScrollContainer"]
margin_right = 66.0
margin_bottom = 81.0

[node name="VladButton" type="Button" parent="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer"]
margin_right = 66.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Vlad Vladostovovitch"

[node name="GeneralButton" type="Button" parent="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 66.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "General Aleksi Butunov"

[node name="ValeryButton" type="Button" parent="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 66.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "Valery Unchok"

[node name="PetyaButton" type="Button" parent="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 66.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Petya Belov"

[node name="GlebButton" type="Button" parent="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 66.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Gleb Tarasov"

[node name="QuestsScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
visible = false
margin_left = 103.0
margin_top = 34.0
margin_right = 171.0
margin_bottom = 163.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/QuestsScrollContainer"]
margin_right = 29.0
margin_bottom = 183.0

[node name="Button" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_right = 29.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button2" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 29.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button3" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 29.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button4" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 29.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button5" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 29.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button6" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 29.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button7" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 29.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button8" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 29.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button9" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 29.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button10" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 29.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="Button11" type="Button" parent="CanvasLayer/Control/QuestsScrollContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 29.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 3 )
text = "Quest 1"

[node name="ItemsScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
visible = false
margin_left = 104.0
margin_top = 34.0
margin_right = 171.0
margin_bottom = 165.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/ItemsScrollContainer"]
margin_right = 46.0
margin_bottom = 166.0

[node name="Button" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_right = 46.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button2" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 46.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button3" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 46.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button4" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 46.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button5" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 46.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button6" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 46.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button7" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 46.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button8" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 46.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button9" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 46.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="Button10" type="Button" parent="CanvasLayer/Control/ItemsScrollContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 46.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 3 )
text = "Inventory Item"

[node name="ExitLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 22.5198
margin_top = 159.394
margin_right = 72.5198
margin_bottom = 166.394
custom_fonts/font = SubResource( 4 )
text = "Press P or Esc to exit."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Folder" type="Panel" parent="CanvasLayer/Control"]
margin_left = 175.0
margin_top = 50.0
margin_right = 300.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( -270.698, 28 )
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FolderTab" type="Panel" parent="CanvasLayer/Control/Folder"]
margin_left = 8.0
margin_top = -10.0
margin_right = 63.0
margin_bottom = 16.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BioControl" type="Control" parent="CanvasLayer/Control/Folder"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCbio" type="Label" parent="CanvasLayer/Control/Folder/BioControl"]
margin_left = 4.0
margin_top = 26.0
margin_right = 122.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Photo" type="ColorRect" parent="CanvasLayer/Control/Folder/BioControl"]
margin_left = 75.0
margin_top = 58.0
margin_right = 121.0
margin_bottom = 111.0
rect_rotation = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Folder/BioControl/Photo"]
margin_left = 2.51721
margin_top = 3.47652
margin_right = 42.5172
margin_bottom = 43.4765
rect_pivot_offset = Vector2( 7.05994, 5.7462 )
color = Color( 0.270588, 0.270588, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCimage" type="Sprite" parent="CanvasLayer/Control/Folder/BioControl/Photo/ColorRect"]
position = Vector2( 19.6291, 21.5627 )
scale = Vector2( 1.20071, 1.20071 )
hframes = 3
vframes = 3

[node name="NPCname" type="Label" parent="CanvasLayer/Control/Folder/BioControl"]
margin_left = 5.0
margin_top = 3.0
margin_right = 80.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 27.0195, 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCtitle" type="Label" parent="CanvasLayer/Control/Folder/BioControl"]
margin_left = 4.89922
margin_top = 13.9783
margin_right = 66.8992
margin_bottom = 27.9783
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/PeopleButton" to="CanvasLayer/Control" method="_on_PeopleButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/QuestsButton" to="CanvasLayer/Control" method="_on_QuestsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/ItemsButton" to="CanvasLayer/Control" method="_on_ItemsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer/VladButton" to="CanvasLayer/Control" method="_on_VladButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer/GeneralButton" to="CanvasLayer/Control" method="_on_GeneralButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer/ValeryButton" to="CanvasLayer/Control" method="_on_ValeryButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer/PetyaButton" to="CanvasLayer/Control" method="_on_PetyaButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PeopleScrollContainer/VBoxContainer/GlebButton" to="CanvasLayer/Control" method="_on_GlebButton_pressed"]
